--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -9,7 +9,11 @@
 .nav-menu-bar-custom {
     float: right;
     width: 600px;
-    padding-top: 18px;
+    padding-top: 15px;
+}
+
+.navbar-toggle-custom {
+    margin-top: 3px;
 }
 
 .navbar {
